--- a/Task7/Task7_Modelcomparison.ipynb
+++ b/Task7/Task7_Modelcomparison.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🏡 Model Comparison & Evaluation - House Prices Dataset\n",
+    "Model Comparison & Evaluation - House Prices Dataset\n",
     "\n",
-    "In this notebook, we will train and compare three models on the Kaggle House Prices dataset:\n",
+    "In this notebook, I will train and compare three models on the Kaggle House Prices dataset:\n",
     "- Linear Regression\n",
     "- Decision Tree Regressor\n",
     "- Random Forest Regressor\n",
     "\n",
-    "We will evaluate them using MAE, RMSE, and R², and visualize the results."
+    "I will evaluate them using MAE, RMSE, and R², and visualize the results."
    ]
   },
   {
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📂 Load & Clean Data"
+    "## Load & Clean Data"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🎯 Feature Selection"
+    "## Feature Selection"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ⚙️ Preprocessor"
+    "## Preprocessor"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🤖 Train Multiple Models"
+    "## Train Multiple Models"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📊 Visualization: Model Comparison"
+    "## Visualization: Model Comparison"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🔎 Best Model Scatter Plot"
+    "## Best Model Scatter Plot"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 📝 Reflection\n",
+    "## Reflection\n",
     "- Which model performed best and why?\n",
     "- What trade-offs did you notice (speed vs accuracy vs interpretability)?\n",
     "- How could you improve the models further?"
@@ -232,3 +232,4 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
