--- a/Task7/Task7_Modelcomparison.ipynb
+++ b/Task7/Task7_Modelcomparison.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model Comparison & Evaluation - House Prices Dataset\n",
+    "## Comparison & Evaluation - House Prices Dataset\n",
     "\n",
     "In this notebook, I will train and compare three models on the Kaggle House Prices dataset:\n",
     "- Linear Regression\n",
@@ -212,9 +212,11 @@
    "metadata": {},
    "source": [
     "## Reflection\n",
-    "- Which model performed best and why?\n",
-    "- What trade-offs did you notice (speed vs accuracy vs interpretability)?\n",
-    "- How could you improve the models further?"
+    "- In my results, the Random Forest Regressor performed the best. I think the reason is that it uses many decision trees together, so it can learn complex patterns in the data without overfitting too much. Linear Regression was simple but couldn’t handle the non-linear parts of the data. The Decision Tree was better but it overfit a bit. Random Forest was a good balance.?\n",
+    "-Linear Regression was the fastest and easiest to understand, but not very accurate.Decision Tree was more accurate and easy to explain (since you can follow the tree), but it overfit the training data.
+Random Forest gave the best accuracy, but it was slower and harder to explain since it’s made of many trees.?\n",
+    "- Adding more useful features or combining features (like total square footage).Doing hyperparameter tuning, for example changing the depth of trees or the number of trees in Random Forest.Using cross-validation instead of just one train-test split to get more reliable results.
+Trying other models like Ridge, Lasso, or boosting methods (XGBoost, LightGBM) which usually perform even better"
    ]
   }
  ],
@@ -232,4 +234,5 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
 
