--- a/Task7/Task7_Modelcomparison.ipynb
+++ b/Task7/Task7_Modelcomparison.ipynb
@@ -213,10 +213,8 @@
    "source": [
     "## Reflection\n",
     "- In my results, the Random Forest Regressor performed the best. I think the reason is that it uses many decision trees together, so it can learn complex patterns in the data without overfitting too much. Linear Regression was simple but couldn’t handle the non-linear parts of the data. The Decision Tree was better but it overfit a bit. Random Forest was a good balance.?\n",
-    "-Linear Regression was the fastest and easiest to understand, but not very accurate.Decision Tree was more accurate and easy to explain (since you can follow the tree), but it overfit the training data.
-Random Forest gave the best accuracy, but it was slower and harder to explain since it’s made of many trees.?\n",
-    "- Adding more useful features or combining features (like total square footage).Doing hyperparameter tuning, for example changing the depth of trees or the number of trees in Random Forest.Using cross-validation instead of just one train-test split to get more reliable results.
-Trying other models like Ridge, Lasso, or boosting methods (XGBoost, LightGBM) which usually perform even better"
+    "-Linear Regression was the fastest and easiest to understand, but not very accurate.Decision Tree was more accurate and easy to explain (since you can follow the tree), but it overfit the training data.Random Forest gave the best accuracy, but it was slower and harder to explain since it’s made of many trees.?\n",
+    "- Adding more useful features or combining features (like total square footage).Doing hyperparameter tuning, for example changing the depth of trees or the number of trees in Random Forest.Using cross-validation instead of just one train-test split to get more reliable results.Trying other models like Ridge, Lasso, or boosting methods (XGBoost, LightGBM) which usually perform even better"
    ]
   }
  ],
@@ -234,5 +232,6 @@ Trying other models like Ridge, Lasso, or boosting methods (XGBoost, LightGBM) w
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
 
 
